2007-03-16  Richard Dale  <rdale@foton.es>

	* Overriding abstract methods wasn't working because no SmokeMethod
	  Attribute was being generated for them
	* Fixed bug in invoking constructors where wrapper instances were being
	  created twice

2007-03-14  Richard Dale  <rdale@foton.es>

	* Only generate destructors if the class is implementing IDisposible
	* Only generate code to set up transparent proxy interceptors for instance
	  or static methods if the class has some instance or static methods that
	  would need an interceptor
	* Order the generated code:
		1) Enums
		2) Properties
		3) Methods not converted
		4) Instance methods
		5) Static methods

2007-03-12  Richard Dale  <rdale@foton.es>

	* When the access level of an overriden method is changed, use 'new' in
	  the method declaration allow the change, rather than always making
	  these methods public
	* Allow covariant return types as C# has them
	* Make some classes non-abstract by adding the missing methods
	* Fix code generation of QApplication.Exec() so apps don't crash on exit
	* Convert 'qreal*' to 'double out' argument types

2007-03-11  Richard Dale  <rdale@foton.es>

	* For pure virtual methods with optional arguments, only translate the
	  longest version to a C# abstract method. Otherwise, it was necessary
	  to add extra methods in subclasses that wouldn't be needed in the C++
	  equivalent code. Fixed example code that needed to do that.

2007-03-08  Richard Dale  <rdale@foton.es>

	* Improved the code generation for overriden methods and they are
	  now labelled 'virtual' or 'override' where appropriate, rather than
	  as 'new'
	* Classes with pure virtual methods are now 'abstract' as are the pure
	  virtual methods.
	* Made the code generated for Q_PROPERTIES shorter for clarity
	* Fixed some compile errors in the examples as a result of the above 
	  changes
	* The tutorial application t14 now seg faults on exit
	* Pure virtual protected methods such as 